--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -21,7 +21,7 @@
   top: 0;
   left: 0;
   z-index: 50;
-  display: none;
+  // display: none;
   .container {
     max-width: 1050px;
     width: 90%;
