--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -13,7 +13,7 @@ body,
 html {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 #app {
   max-width: 1440px;
