--- a/src/style/__about-us.scss
+++ b/src/style/__about-us.scss
@@ -4,6 +4,7 @@
   border: none;
   // display: none;
   //border: black 1px solid;
+  margin: 0 auto;
   @media (max-width: 1439px) {
     // width: 1280px;
     width: 100vw;
