--- a/src/style/__discuss.scss
+++ b/src/style/__discuss.scss
@@ -2,6 +2,7 @@
   width: 1440px;
   height: fit-content;
   //display: none;
+  margin: 0 auto;
   @media (max-width: 1439px) {
     width: 100vw;
   }
