--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -1,62 +1,114 @@
-// .sticky-container {
-//   width: fit-content;
-
-//   main {
-//     overflow-x: hidden;
-//     display: flex;
-//     position: sticky;
-//     top: 0;
-//   }
-//   section {
-//     min-width: 50vw;
-//     min-height: 100vh;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     font-size: 4ch;
-//   }
-// }
-
 .how-we-work {
-  // display: flex;
-  // flex-wrap: nowrap;
-  // overflow-x: auto;
-  // width: 1440px;
   width: auto;
   height: auto;
-  // height: 100vh;
-  // height: 900px;
-  // background-color: $secondary;
-  // border: none;
-  // transition: transform 0.3s;
-
-  // @media (max-width: 1439px) {
-  //   width: 100vw;
-  //   margin: 0 auto;
-  //   justify-content: center;
-  // }
-  // @media (max-width: 450px) {
-  //   margin-top: 60px;
-  // }
 
   main {
     overflow-x: hidden;
     display: flex;
     position: sticky;
     top: 0;
-    width: 90vw;
+
+    width: 100vw;
   }
   section {
-    min-width: 50vw;
+    min-width: 50%;
+
     min-height: 100vh;
-    //height: 600px;
+
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 4ch;
     background-color: $secondary;
-  }
+    margin-top: 100px; // чтоб не заезжал за шапку
+    @media (max-width: 1100px) {
+      min-width: 100%;
+    }
+    .how-we-work__block {
+      margin-left: 100px;
+      margin-right: 100px;
+      margin-top: -100px;
+      height: 75%;
+      width: 65%;
+      @media (max-width: 1100px) {
+        width: 50%;
+      }
+      @media (max-width: 700px) {
+        width: 80%;
+      }
+      @media (max-width: 550px) {
+        width: 90%;
+      }
+      @media (max-width: 425px) {
+        margin-left: 0;
+        margin-right: 0;
+      }
+      // border: #f2f2f2 1px solid;
+      .how-we-work__title {
+        h1 {
+          color: $white;
+          font-weight: 700;
+          font-size: 64px;
+          color: #14213d;
+          text-shadow: -0 -1px 1px #f2f2f2, 0 -1px 1px #f2f2f2,
+            -0 1px 1px #f2f2f2, 0 1px 1px #f2f2f2, -1px -0 1px #f2f2f2,
+            1px -0 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2,
+            -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2,
+            1px 1px 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2,
+            -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2;
+        }
+        p {
+          font-size: 20px;
+          font-weight: 400;
+          line-height: 30px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: $white;
+        }
+      }
+    }
+    .steps {
+      .how-we-work__text {
+        margin: 24px;
+        span {
+          font-size: 20px;
+          font-weight: 700;
+          line-height: 30px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: $orange;
+        }
+        h1 {
+          font-size: 40px;
+          font-weight: 700;
+          line-height: 48px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: $white;
+        }
+        p {
+          font-size: 20px;
+          font-weight: 400;
+          line-height: 30px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: $white;
+        }
+      }
+      .how-we-work__picture {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: fit-content;
+      }
+      img {
+        width: 60%;
 
+        margin: 0 auto;
+      }
+    }
+  }
   //
   //
   //
