--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -7,6 +7,9 @@
   border: none;
   //display: none;
   // margin-top: 80px;
+  margin: 0 auto;
+  // justify-content: center;
+  // width: 100vw;
   @media (max-width: 1439px) {
     //width: 100%;
     width: 100vw;
