--- a/src/style/style.css
+++ b/src/style/style.css
@@ -258,6 +258,7 @@
   height: 700px;
   background: linear-gradient(103.2deg, #14213d 0%, #28427b 111.47%);
   border: none;
+  margin: 0 auto;
 }
 @media (max-width: 1439px) {
   .welcome-screen {
@@ -415,6 +416,7 @@
   width: 1440px;
   height: 877px;
   border: none;
+  margin: 0 auto;
 }
 @media (max-width: 1439px) {
   .about-us {
@@ -723,16 +725,104 @@ content .about-us__partners img {
   display: flex;
   position: sticky;
   top: 0;
-  width: 90vw;
+  width: 100vw;
 }
 .how-we-work section {
-  min-width: 50vw;
+  min-width: 50%;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 4ch;
   background-color: #14213d;
+  margin-top: 100px;
+}
+@media (max-width: 1100px) {
+  .how-we-work section {
+    min-width: 100%;
+  }
+}
+.how-we-work section .how-we-work__block {
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: -100px;
+  height: 75%;
+  width: 65%;
+}
+@media (max-width: 1100px) {
+  .how-we-work section .how-we-work__block {
+    width: 50%;
+  }
+}
+@media (max-width: 700px) {
+  .how-we-work section .how-we-work__block {
+    width: 80%;
+  }
+}
+@media (max-width: 550px) {
+  .how-we-work section .how-we-work__block {
+    width: 90%;
+  }
+}
+@media (max-width: 425px) {
+  .how-we-work section .how-we-work__block {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+.how-we-work section .how-we-work__block .how-we-work__title h1 {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 64px;
+  color: #14213d;
+  text-shadow: 0 -1px 1px #f2f2f2, 0 -1px 1px #f2f2f2, 0 1px 1px #f2f2f2, 0 1px 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2;
+}
+.how-we-work section .how-we-work__block .how-we-work__title p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.how-we-work section .steps .how-we-work__text {
+  margin: 24px;
+}
+.how-we-work section .steps .how-we-work__text span {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #fca311;
+}
+.how-we-work section .steps .how-we-work__text h1 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.how-we-work section .steps .how-we-work__text p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.how-we-work section .steps .how-we-work__picture {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.how-we-work section .steps img {
+  width: 60%;
+  margin: 0 auto;
 }
 
 .services {
@@ -742,6 +832,7 @@ content .about-us__partners img {
   width: 1440px;
   height: -moz-fit-content;
   height: fit-content;
+  margin: 0 auto;
 }
 @media (max-width: 1439px) {
   .services {
@@ -1011,6 +1102,7 @@ content .about-us__partners img {
   width: 1440px;
   height: -moz-fit-content;
   height: fit-content;
+  margin: 0 auto;
 }
 @media (max-width: 1439px) {
   .selected-cases {
@@ -1533,6 +1625,7 @@ content .about-us__partners img {
   width: 1440px;
   height: -moz-fit-content;
   height: fit-content;
+  margin: 0 auto;
 }
 @media (max-width: 1439px) {
   .discuss {
@@ -1918,6 +2011,10 @@ body,
 html {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
+}
+body ::-webkit-scrollbar,
+html ::-webkit-scrollbar {
+  width: 0;
 }
 
 #app {
