--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,6 +14,18 @@ html {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
   // overflow-x: hidden;
+
+  ::-webkit-scrollbar {
+    width: 0;
+    // height: 20px;
+  }
+  // ::-webkit-scrollbar:horizontal {
+  //   width: 20px;
+  // }
+  // ::-webkit-scrollbar-thumb:horizontal {
+  //   // background: #000;
+  //   width: 0;
+  // }
 }
 #app {
   max-width: 1440px;
@@ -28,6 +40,9 @@ html {
   font-family: "Nunito Sans", sans-serif;
   main {
     margin-top: 80px;
+    // div {
+    //   margin: o auto;
+    // }
   }
 }
 
