--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -3,7 +3,7 @@
   height: auto;
 
   main {
-    overflow-x: hidden;
+    // overflow-x: hidden;
     display: flex;
     position: sticky;
     top: 0;
