--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -3,8 +3,8 @@
   height: auto;
 
   main {
-    // overflow-x: hidden;
-    overflow-x: auto;
+    //  overflow-x: hidden;
+    // overflow-x: auto;
     display: flex;
     // position: sticky;
     position: -webkit-sticky;
@@ -14,7 +14,10 @@
     position: sticky;
     top: 0;
 
-    width: 100vw;
+    // width: 100vw;
+
+    overflow-x: scroll;
+    width: inherit;
   }
   section {
     min-width: 50%;
