--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -4,32 +4,25 @@
 
   main {
     overflow-x: hidden;
-    // overflow-x: auto;
     display: flex;
-
     position: -webkit-sticky;
     position: -moz-sticky;
     position: -o-sticky;
     position: -ms-sticky;
     position: sticky;
     top: 0;
-
     width: 100vw;
-
-    // overflow-x: scroll;
-    // width: inherit;
   }
+
   section {
     min-width: 50%;
-
     min-height: 100vh;
-
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 4ch;
     background-color: $secondary;
-    margin-top: 100px; // чтоб не заезжал за шапку
+    margin-top: 100px;
     @media (max-width: 1100px) {
       min-width: 100%;
     }
@@ -52,7 +45,6 @@
         margin-left: 0;
         margin-right: 0;
       }
-      // border: #f2f2f2 1px solid;
       .how-we-work__title {
         h1 {
           color: $white;
@@ -113,7 +105,6 @@
       }
       img {
         width: 60%;
-
         margin: 0 auto;
       }
     }
