--- a/src/style/__selected-cases.scss
+++ b/src/style/__selected-cases.scss
@@ -4,7 +4,6 @@
   align-items: center;
   width: 1440px;
   height: fit-content;
-  //display: none;
   margin: 0 auto;
   @media (max-width: 1439px) {
     width: 100vw;
@@ -57,9 +56,6 @@
         @media (max-width: 650px) {
           font-size: 26px;
         }
-        // @media (max-width: 460px) {
-        //   font-size: 20px;
-        // }
       }
       p {
         font-size: 16px;
@@ -71,10 +67,6 @@
         @media (max-width: 650px) {
           font-size: 14px;
         }
-        // @media (max-width: 460px) {
-        //   font-size: 12px;
-        //   line-height: 14px;
-        // }
       }
     }
     .selected-cases__logo {
@@ -107,7 +99,6 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;
-      // background-attachment: fixed;
       @media (max-width: 1280px) {
         width: 90vw;
       }
@@ -124,10 +115,6 @@
         @media (max-width: 1280px) {
           width: 90vw;
         }
-        // @media (max-width: 650px) {
-        //   height: 45vw;
-        // }
-
         .selected-cases__wrapper {
           height: 100%;
           p {
@@ -145,6 +132,7 @@
       justify-content: space-between;
       width: 632px;
       height: 600px;
+
       @media (max-width: 1280px) {
         width: 90vw;
         margin-top: 16px;
@@ -162,13 +150,11 @@
           width: 90vw;
         }
         @media (max-width: 650px) {
-          // height: 44vw;
           height: fit-content;
         }
 
         .selected-cases__rzd-img {
           width: 530px;
-
           background-image: url(../images/rzd-img.png);
           background-repeat: no-repeat;
           background-size: cover;
@@ -187,7 +173,6 @@
         width: 100%;
         background-color: beige;
         height: 292px;
-
         background-image: url(../images/declarant-img.png);
         background-repeat: no-repeat;
         background-size: cover;
@@ -210,10 +195,8 @@
     flex-direction: row;
     justify-content: space-between;
     flex-flow: row wrap;
-    // transition-duration: 2s;
-    // transition-duration: 9s;
+
     @media (max-width: 1280px) {
-      // flex-direction: column;
       align-items: center;
       justify-content: space-between;
       width: 90vw;
@@ -237,16 +220,15 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;
+
       @media (max-width: 1280px) {
         width: 44vw;
       }
       @media (max-width: 850px) {
         height: 44vw;
-        //  margin: 0;
       }
       @media (max-width: 600px) {
         width: 90vw;
-        //  margin: 0;
       }
       @media (max-width: 390px) {
         height: fit-content;
@@ -265,7 +247,6 @@
       }
       @media (max-width: 850px) {
         height: 44vw;
-        // margin: 0;
       }
       @media (max-width: 800px) {
         background: linear-gradient(
@@ -331,9 +312,6 @@
     }
     .selected-cases__peterhof {
       background-image: url(../images/peterhof.png);
-
-      // background: linear-gradient(rgba(49, 48, 48, 0.8), rgba(13, 13, 13, 0.5)),
-      //   url(../images/peterhof.png);
       display: none;
       width: 416px;
       height: 424px;
@@ -435,6 +413,7 @@
       height: 424px;
       margin-top: 16px;
       background-color: $secondary;
+      cursor: pointer;
       @media (max-width: 1280px) {
         width: 44vw;
         margin: 20px auto;
