--- a/src/style/__discuss.scss
+++ b/src/style/__discuss.scss
@@ -27,6 +27,9 @@
       flex-direction: column;
       justify-content: space-between;
       width: 50%;
+      img {
+        width: 458px;
+      }
       @media (max-width: 1280px) {
         width: fit-content;
       }
