--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -16,7 +16,7 @@
     width: 100%;
     box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
     background-color: $white;
-    @media (max-width: 1020px) {
+    @media (max-width: 1040px) {
       display: block;
     }
   }
@@ -25,7 +25,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 62px;
+    //height: 62px;
+    height: 80px;
   }
 
   .navbar .menu-items {
@@ -214,7 +215,7 @@
     }
     @media (max-width: 1280px) {
     }
-    @media (max-width: 1020px) {
+    @media (max-width: 1040px) {
       display: none;
     }
     div {
