--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -23,8 +23,16 @@
     font-size: 4ch;
     background-color: $secondary;
     margin-top: 100px;
-    @media (max-width: 1100px) {
+    @media (max-width: 1040px) {
+      margin-top: 80px;
+    }
+    @media (max-width: 950px) {
       min-width: 100%;
+    }
+    .steps {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .how-we-work__block {
       margin-left: 100px;
@@ -32,12 +40,14 @@
       margin-top: -100px;
       height: 75%;
       width: 65%;
-      @media (max-width: 1100px) {
-        width: 50%;
-      }
-      @media (max-width: 700px) {
+
+      width: 100%;
+      margin-left: 50px;
+      margin-right: 50px;
+      @media (max-width: 950px) {
         width: 80%;
       }
+
       @media (max-width: 550px) {
         width: 90%;
       }
@@ -105,6 +115,7 @@
       }
       img {
         width: 60%;
+        width: 50%;
         margin: 0 auto;
       }
     }
