--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -7,6 +7,7 @@
   background: linear-gradient(103.2deg, #14213d 0%, #28427b 111.47%);
   border: none;
   margin: 0 auto;
+  margin-top: 10px;
 
   @media (max-width: 1439px) {
     width: 100vw;
