--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -4,10 +4,11 @@
   width: 100vw;
   justify-content: center;
   height: 700px;
+  // height: 100vh;
   background: linear-gradient(103.2deg, #14213d 0%, #28427b 111.47%);
   border: none;
   margin: 0 auto;
-  margin-top: 10px;
+  //margin-top: 20px;
 
   @media (max-width: 1439px) {
     width: 100vw;
@@ -92,6 +93,11 @@
   align-items: center;
   width: 720px;
   background-image: url(../images/welcome-screen.png);
+  // background-repeat: no-repeat;
+
+  // background-repeat: no-repeat;
+  //background-size: cover;
+  // background-position: center center;
   @media (max-width: 1439px) {
     width: 50%;
   }
