--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -37,20 +37,24 @@
   color: #fff;
   font-size: 100px;
 
-  position: relative; /* важно - для того, чтобы псевдоэлемент позиционировался относительно этого элемента */
+  // position: relative; /* важно - для того, чтобы псевдоэлемент позиционировался относительно этого элемента */
   //border-top: 55px solid transparent;
-  margin-top: 100px;
+  // margin-top: 100px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  &::before {
-    content: "";
-    position: absolute;
-    top: -2px; /* равен по модулю толщине border */
-    left: 0;
-    right: 0;
-    border-top: 2px solid #ccc;
-  }
+  padding-bottom: 200px;
+  padding-top: 200px;
+  margin-top: -200px;
+  //margin-top: 200px;
+  // &::before {
+  //   content: "";
+  //   position: absolute;
+  //   top: -2px; /* равен по модулю толщине border */
+  //   left: 0;
+  //   right: 0;
+  //   border-top: 2px solid #ccc;
+  // }
 
   .anchor {
     position: absolute;
