--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   background-color: antiquewhite;
   height: 80vh;
+  margin-top: 100px;
 }
 
 .test {
@@ -57,8 +58,12 @@
   // }
 
   .anchor {
-    position: absolute;
-    top: -100px;
-    left: 90vw;
+    position: relative;
+    top: -240px;
+    left: 0;
+    border: black 1px solid;
+    background-color: aqua;
+    height: 20px;
+    width: 90vw;
   }
 }
