--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2037,6 +2037,7 @@ content .about-us__partners img {
   margin: 0 auto;
   background-color: antiquewhite;
   height: 80vh;
+  margin-top: 100px;
 }
 
 .test {
@@ -2066,9 +2067,13 @@ content .about-us__partners img {
   margin-top: -200px;
 }
 .test__wrapper .anchor {
-  position: absolute;
-  top: -100px;
-  left: 90vw;
+  position: relative;
+  top: -240px;
+  left: 0;
+  border: black 1px solid;
+  background-color: aqua;
+  height: 20px;
+  width: 90vw;
 }
 
 body,
