--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -1,69 +1,111 @@
-.parent {
-  width: 1440px;
-  width: 90vw;
-  margin: 0 auto;
-  background-color: antiquewhite;
-  height: 88vh;
-  margin-top: 100px;
+.test {
+  overflow-x: auto;
+  height: 90vh;
+  width: 500px;
+  margin: 50px auto;
+  scroll-snap-type: y mandatory;
 }
 
-.test {
-  //   border: black 1x solid;
-  //   width: 100vw;
-  //   max-width: 900px;
-  //   height: 600px;
-  //   background-color: antiquewhite;
-  //   display: flex;
-  //   flex-direction: row;
-  //   overflow-x: scroll;
-  background-color: #fff;
-  min-width: 100%;
-  min-height: 100%;
+.section_item {
   display: flex;
-  //overflow-x: auto;
-}
-.test__wrapper {
-  //   border: black 1px solid;
-  //   width: 600px;
-  //height: 100%;
-  background-color: #e74c3c;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 90vw;
-  margin: 5px;
-  border-top: 00px;
-  position: relative;
-  color: #fff;
-  font-size: 100px;
-
-  // position: relative; /* важно - для того, чтобы псевдоэлемент позиционировался относительно этого элемента */
-  //border-top: 55px solid transparent;
-  // margin-top: 100px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  padding-bottom: 200px;
-  padding-top: 200px;
-  margin-top: -200px;
-  //margin-top: 200px;
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   top: -2px; /* равен по модулю толщине border */
-  //   left: 0;
-  //   right: 0;
-  //   border-top: 2px solid #ccc;
-  // }
-
-  .anchor {
-    position: relative;
-    top: -240px;
-    left: 0;
-    border: black 1px solid;
-    background-color: aqua;
-    height: 20px;
-    width: 90vw;
-  }
+  flex: 0 0 300px;
+  height: 100%;
+  padding: 20px;
+  font-size: 20px;
+  scroll-snap-align: start;
 }
+
+.item1 {
+  background-color: #ff7373;
+}
+
+.item2 {
+  background-color: #ff9640;
+}
+
+.item3 {
+  background-color: #5ccccc;
+}
+
+.item4 {
+  background-color: #67e667;
+}
+
+.item5 {
+  background-color: #1d7373;
+}
+
+// .parent {
+//   width: 1440px;
+//   width: 90vw;
+//   margin: 0 auto;
+//   background-color: antiquewhite;
+//   height: 88vh;
+//   margin-top: 100px;
+// }
+
+// .test {
+//   //   border: black 1x solid;
+//   //   width: 100vw;
+//   //   max-width: 900px;
+//   //   height: 600px;
+//   //   background-color: antiquewhite;
+//   //   display: flex;
+//   //   flex-direction: row;
+//   //   overflow-x: scroll;
+//   background-color: #fff;
+//   min-width: 100%;
+//   min-height: 100%;
+//   display: flex;
+//   //overflow-x: auto;
+// }
+// .test__wrapper {
+//   //   border: black 1px solid;
+//   //   width: 600px;
+//   //height: 100%;
+//   background-color: #e74c3c;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   min-width: 90vw;
+//   margin: 5px;
+//   border-top: 00px;
+//   position: relative;
+//   color: #fff;
+//   font-size: 100px;
+
+//   // position: relative; /* важно - для того, чтобы псевдоэлемент позиционировался относительно этого элемента */
+//   //border-top: 55px solid transparent;
+//   // margin-top: 100px;
+//   // -moz-background-clip: padding;
+//   // -webkit-background-clip: padding-box;
+//   // background-clip: padding-box;
+//   // padding-bottom: 200px;
+//   // padding-top: 200px;
+//   // margin-top: -200px;
+//   //margin-top: 200px;
+//   // &::before {
+//   //   content: "";
+//   //   position: absolute;
+//   //   top: -2px; /* равен по модулю толщине border */
+//   //   left: 0;
+//   //   right: 0;
+//   //   border-top: 2px solid #ccc;
+//   // }
+
+//   // .anchor {
+//   //   position: relative;
+//   //   top: -240px;
+//   //   left: 0;
+//   //   border: black 1px solid;
+//   //   background-color: aqua;
+//   //   height: 20px;
+//   //   width: 90vw;
+//   // }
+// // }
+// // .invis-test {
+// //   display: none;
+// // }
