--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2031,49 +2031,43 @@ content .about-us__partners img {
   font-size: 16px;
 }
 
-.parent {
-  width: 1440px;
-  width: 90vw;
-  margin: 0 auto;
-  background-color: antiquewhite;
-  height: 88vh;
-  margin-top: 100px;
-}
-
 .test {
-  background-color: #fff;
-  min-width: 100%;
-  min-height: 100%;
-  display: flex;
+  overflow-x: auto;
+  height: 90vh;
+  width: 500px;
+  margin: 50px auto;
+  scroll-snap-type: y mandatory;
 }
 
-.test__wrapper {
-  background-color: #e74c3c;
+.section_item {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 90vw;
-  margin: 5px;
-  border-top: 0px;
-  position: relative;
-  color: #fff;
-  font-size: 100px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  padding-bottom: 200px;
-  padding-top: 200px;
-  margin-top: -200px;
+  flex: 0 0 300px;
+  height: 100%;
+  padding: 20px;
+  font-size: 20px;
+  scroll-snap-align: start;
 }
-.test__wrapper .anchor {
-  position: relative;
-  top: -240px;
-  left: 0;
-  border: black 1px solid;
-  background-color: aqua;
-  height: 20px;
-  width: 90vw;
+
+.item1 {
+  background-color: #ff7373;
+}
+
+.item2 {
+  background-color: #ff9640;
+}
+
+.item3 {
+  background-color: #5ccccc;
+}
+
+.item4 {
+  background-color: #67e667;
+}
+
+.item5 {
+  background-color: #1d7373;
 }
 
 body,
