--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -1,7 +1,7 @@
-.test {
+.parent {
   overflow-x: auto;
   height: 90vh;
-  width: 500px;
+  width: 100%;
   margin: 50px auto;
   scroll-snap-type: y mandatory;
 }
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   flex: 0 0 300px;
-  height: 100%;
+  height: 300px;
   padding: 20px;
   font-size: 20px;
   scroll-snap-align: start;
