--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2031,10 +2031,10 @@ content .about-us__partners img {
   font-size: 16px;
 }
 
-.test {
+.parent {
   overflow-x: auto;
   height: 90vh;
-  width: 500px;
+  width: 100%;
   margin: 50px auto;
   scroll-snap-type: y mandatory;
 }
@@ -2044,7 +2044,7 @@ content .about-us__partners img {
   justify-content: center;
   align-items: center;
   flex: 0 0 300px;
-  height: 100%;
+  height: 300px;
   padding: 20px;
   font-size: 20px;
   scroll-snap-align: start;
