--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2032,7 +2032,7 @@ content .about-us__partners img {
 }
 
 .parent {
-  overflow-x: auto;
+  overflow-y: auto;
   height: 90vh;
   width: 100%;
   margin: 50px auto;
@@ -2044,10 +2044,16 @@ content .about-us__partners img {
   justify-content: center;
   align-items: center;
   flex: 0 0 300px;
-  height: 300px;
+  height: 90vh;
   padding: 20px;
   font-size: 20px;
   scroll-snap-align: start;
+  scroll-snap-stop: always;
+  background-color: #5ccccc;
+  border: black 2px solid;
+}
+.section_item img {
+  width: 100px;
 }
 
 .item1 {
