--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -8,15 +8,14 @@
 
 .section_item {
   display: flex;
-
   justify-content: center;
   align-items: center;
   flex: 0 0 300px;
-  height: 90vh;
+  height: 88vh;
   padding: 20px;
   font-size: 20px;
   scroll-snap-align: start;
-  scroll-snap-stop: always;
+  //scroll-snap-stop: always;
   background-color: #5ccccc;
   border: black 2px solid;
   img {
