--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2048,7 +2048,7 @@ content .about-us__partners img {
   padding: 20px;
   font-size: 20px;
   scroll-snap-align: start;
-  background-color: #5ccccc;
+  background-color: #14213d;
   border: black 2px solid;
 }
 .section_item img {
