--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -1,18 +1,24 @@
 .parent {
-  overflow-y: auto;
+  overflow-x: auto;
   height: 90vh;
-  width: 100%;
+  width: 90vw;
   margin: 50px auto;
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: x mandatory;
+  flex-wrap: nowrap;
+}
+.sections {
+  display: flex;
+  flex-direction: row;
 }
 
 .section_item {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 0 0 300px;
+  //flex: 0 0 0;
+  width: 89vw;
   height: 88vh;
-  padding: 20px;
+  //padding: 20px;
   font-size: 20px;
   scroll-snap-align: start;
   //scroll-snap-stop: always;
@@ -21,6 +27,9 @@
   border: black 2px solid;
   img {
     width: 100px;
+  }
+  .how-we-work__block {
+    width: 90vw;
   }
 }
 
