--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -29,7 +29,72 @@
     width: 100px;
   }
   .how-we-work__block {
-    width: 100vw;
+    border: white 1px solid;
+    width: 95vw;
+    margin: 0 20px 0 20px;
+    .how-we-work__title {
+      h1 {
+        color: $white;
+        font-weight: 700;
+        font-size: 64px;
+        color: #14213d;
+        text-shadow: -0 -1px 1px #f2f2f2, 0 -1px 1px #f2f2f2, -0 1px 1px #f2f2f2,
+          0 1px 1px #f2f2f2, -1px -0 1px #f2f2f2, 1px -0 1px #f2f2f2,
+          -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px -1px 1px #f2f2f2,
+          1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2,
+          -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2,
+          1px 1px 1px #f2f2f2;
+      }
+      p {
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 30px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: $white;
+      }
+    }
+  }
+  .steps {
+    .how-we-work__text {
+      margin: 24px;
+      span {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: $orange;
+      }
+      h1 {
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 48px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: $white;
+      }
+      p {
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 30px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: $white;
+      }
+    }
+    .how-we-work__picture {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: fit-content;
+    }
+    img {
+      width: 60%;
+      width: 50%;
+      margin: 0 auto;
+    }
   }
 }
 
