--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2060,7 +2060,64 @@ content .about-us__partners img {
   width: 100px;
 }
 .section_item .how-we-work__block {
-  width: 100vw;
+  border: white 1px solid;
+  width: 95vw;
+  margin: 0 20px 0 20px;
+}
+.section_item .how-we-work__block .how-we-work__title h1 {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 64px;
+  color: #14213d;
+  text-shadow: 0 -1px 1px #f2f2f2, 0 -1px 1px #f2f2f2, 0 1px 1px #f2f2f2, 0 1px 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2;
+}
+.section_item .how-we-work__block .how-we-work__title p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.section_item .steps .how-we-work__text {
+  margin: 24px;
+}
+.section_item .steps .how-we-work__text span {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #fca311;
+}
+.section_item .steps .how-we-work__text h1 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.section_item .steps .how-we-work__text p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.section_item .steps .how-we-work__picture {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.section_item .steps img {
+  width: 60%;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .item1 {
