--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -1,6 +1,6 @@
 .parent {
   overflow-x: auto;
-  height: 90vh;
+  height: 85vh;
   width: 100vw;
   margin: 50px auto;
   scroll-snap-type: x mandatory;
@@ -17,7 +17,7 @@
   align-items: center;
   //flex: 0 0 0;
   width: 100vw;
-  height: 88vh;
+  height: 85vh;
   //padding: 20px;
   font-size: 20px;
   scroll-snap-align: start;
@@ -56,8 +56,12 @@
     }
   }
   .steps {
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     .how-we-work__text {
-      margin: 24px;
+      //margin: 24px;
       span {
         font-size: 20px;
         font-weight: 700;
