--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2033,7 +2033,7 @@ content .about-us__partners img {
 
 .parent {
   overflow-x: auto;
-  height: 90vh;
+  height: 85vh;
   width: 100vw;
   margin: 50px auto;
   scroll-snap-type: x mandatory;
@@ -2050,7 +2050,7 @@ content .about-us__partners img {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 88vh;
+  height: 85vh;
   font-size: 20px;
   scroll-snap-align: start;
   background-color: #14213d;
@@ -2079,8 +2079,11 @@ content .about-us__partners img {
   text-align: left;
   color: #ffffff;
 }
-.section_item .steps .how-we-work__text {
-  margin: 24px;
+.section_item .steps {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .section_item .steps .how-we-work__text span {
   font-size: 20px;
