--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -1,6 +1,6 @@
 .parent {
   overflow-x: auto;
-
+  overflow-y: inherit;
   height: 85vh;
   width: 100vw;
   margin: 50px auto;
@@ -25,7 +25,7 @@
   //scroll-snap-stop: always;
 
   background-color: $secondary;
-  border: black 2px solid;
+  // border: black 2px solid;
   img {
     width: 100px;
   }
