--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2033,6 +2033,7 @@ content .about-us__partners img {
 
 .parent {
   overflow-x: auto;
+  overflow-y: inherit;
   height: 85vh;
   width: 100vw;
   margin: 50px auto;
@@ -2054,7 +2055,6 @@ content .about-us__partners img {
   font-size: 20px;
   scroll-snap-align: start;
   background-color: #14213d;
-  border: black 2px solid;
 }
 .section_item img {
   width: 100px;
