--- a/src/style/__test.scss
+++ b/src/style/__test.scss
@@ -30,7 +30,7 @@
     width: 100px;
   }
   .how-we-work__block {
-    border: white 1px solid;
+    //border: white 1px solid;
     width: 95vw;
     margin: 0 20px 0 20px;
     .how-we-work__title {
