--- a/src/style/style.css
+++ b/src/style/style.css
@@ -839,6 +839,96 @@ content .about-us__partners img {
   margin: 0 auto;
 }
 
+.how-we-work-mobile {
+  overflow-x: auto;
+  overflow-y: inherit;
+  height: 85vh;
+  width: 100vw;
+  margin: 50px auto;
+  scroll-snap-type: x mandatory;
+  flex-wrap: nowrap;
+}
+.how-we-work-mobile .sections main {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+}
+.how-we-work-mobile .sections main .section_item {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  width: 100vw;
+  height: 85vh;
+  font-size: 20px;
+  scroll-snap-align: start;
+  background-color: #14213d;
+}
+.how-we-work-mobile .sections main .section_item img {
+  width: 100px;
+}
+.how-we-work-mobile .sections main .section_item .how-we-work__block {
+  width: 95vw;
+  margin: 0 20px 0 20px;
+}
+.how-we-work-mobile .sections main .section_item .how-we-work__block .how-we-work__title h1 {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 50px;
+  color: #14213d;
+  text-shadow: 0 -1px 1px #f2f2f2, 0 -1px 1px #f2f2f2, 0 1px 1px #f2f2f2, 0 1px 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2;
+}
+.how-we-work-mobile .sections main .section_item .how-we-work__block .how-we-work__title p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.how-we-work-mobile .sections main .section_item .steps {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.how-we-work-mobile .sections main .section_item .steps .how-we-work__text span {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #fca311;
+}
+.how-we-work-mobile .sections main .section_item .steps .how-we-work__text h1 {
+  font-size: 34px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.how-we-work-mobile .sections main .section_item .steps .how-we-work__text p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.how-we-work-mobile .sections main .section_item .steps .how-we-work__picture {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.how-we-work-mobile .sections main .section_item .steps img {
+  width: 60%;
+  width: 50%;
+  margin: 0 auto;
+}
+
 .services {
   display: flex;
   flex-direction: column;
@@ -2029,117 +2119,6 @@ content .about-us__partners img {
 .footer .footer__wrapper .footer__bottom .footer__year p {
   color: #cccccc;
   font-size: 16px;
-}
-
-.parent {
-  overflow-x: auto;
-  overflow-y: inherit;
-  height: 85vh;
-  width: 100vw;
-  margin: 50px auto;
-  scroll-snap-type: x mandatory;
-  flex-wrap: nowrap;
-}
-
-.sections {
-  display: flex;
-  flex-direction: row;
-}
-
-.section_item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 85vh;
-  font-size: 20px;
-  scroll-snap-align: start;
-  background-color: #14213d;
-}
-.section_item img {
-  width: 100px;
-}
-.section_item .how-we-work__block {
-  width: 95vw;
-  margin: 0 20px 0 20px;
-}
-.section_item .how-we-work__block .how-we-work__title h1 {
-  color: #ffffff;
-  font-weight: 700;
-  font-size: 64px;
-  color: #14213d;
-  text-shadow: 0 -1px 1px #f2f2f2, 0 -1px 1px #f2f2f2, 0 1px 1px #f2f2f2, 0 1px 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px 0 1px #f2f2f2, 1px 0 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2, -1px -1px 1px #f2f2f2, 1px -1px 1px #f2f2f2, -1px 1px 1px #f2f2f2, 1px 1px 1px #f2f2f2;
-}
-.section_item .how-we-work__block .how-we-work__title p {
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 30px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #ffffff;
-}
-.section_item .steps {
-  height: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.section_item .steps .how-we-work__text span {
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 30px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #fca311;
-}
-.section_item .steps .how-we-work__text h1 {
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 48px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #ffffff;
-}
-.section_item .steps .how-we-work__text p {
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 30px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #ffffff;
-}
-.section_item .steps .how-we-work__picture {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-.section_item .steps img {
-  width: 60%;
-  width: 50%;
-  margin: 0 auto;
-}
-
-.item1 {
-  background-color: #ff7373;
-}
-
-.item2 {
-  background-color: #ff9640;
-}
-
-.item3 {
-  background-color: #5ccccc;
-}
-
-.item4 {
-  background-color: #67e667;
-}
-
-.item5 {
-  background-color: #1d7373;
 }
 
 body,
