--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -124,12 +124,14 @@
 .how-we-work-mobile {
   overflow-x: auto;
   overflow-y: inherit;
-  height: 85vh;
+  // height: 85vh;
+  height: fit-content;
   width: 100vw;
   margin: 50px auto;
   scroll-snap-type: x mandatory;
   flex-wrap: nowrap;
   .sections {
+    height: 85vh !important;
     main {
       display: flex;
       flex-direction: row;
