--- a/src/style/style.css
+++ b/src/style/style.css
@@ -842,11 +842,15 @@ content .about-us__partners img {
 .how-we-work-mobile {
   overflow-x: auto;
   overflow-y: inherit;
-  height: 85vh;
+  height: -moz-fit-content;
+  height: fit-content;
   width: 100vw;
   margin: 50px auto;
   scroll-snap-type: x mandatory;
   flex-wrap: nowrap;
+}
+.how-we-work-mobile .sections {
+  height: 85vh !important;
 }
 .how-we-work-mobile .sections main {
   display: flex;
